Added swtbot task to ant