@@ -44,6 +44,39 @@
 		</jar>
 	</target>
     
+	<target name="install-swtbot">
+		<echo>SWTBot install</echo>
+		<java dir="${eclipse.home}" fork="true" logError="true" classname="org.eclipse.core.launcher.Main" failonerror="false">
+			<classpath>
+				<fileset dir="${eclipse.home}/plugins">
+					<include name="org.eclipse.equinox.launcher_*.jar"/>
+				</fileset>
+			</classpath>
+			<jvmarg line="-Xms256M -Xmx768M -XX:MaxPermSize=512M"/>
+			<arg line="-application org.eclipse.equinox.p2.director"/>
+			<arg line="-noSplash"/>
+			<arg line="-repository  http://download.eclipse.org/technology/swtbot/releases/latest"/>
+			<arg line="-installIUs org.eclipse.swtbot.feature.group,org.eclipse.swtbot.eclipse.core"/>
+			<arg line="-consoleLog"/>
+			<arg line="-debug"/>
+		</java>
+	</target>
+	
+	<target name="swtbot">
+		<echo>SWTBot test</echo>
+		<java dir="${eclipse.home}" fork="true" logError="true" classname="org.eclipse.core.launcher.Main" failonerror="false">
+			<classpath>
+				<fileset dir="${eclipse.home}/plugins">
+					<include name="org.eclipse.equinox.launcher_*.jar"/>
+				</fileset>
+			</classpath>
+			<jvmarg line="-Xms256M -Xmx768M -XX:MaxPermSize=512M"/>
+			<arg line="-application org.eclipse.swtbot.eclipse.core.swtbottestapplication"/>
+			<arg line="-className org.brailleblaster.unitTests.AllSelectionTests "/>
+			<arg line="-consoleLog"/>
+			<arg line="-debug"/>
+		</java>
+	</target>
 	
     <target name="clean">
         <description>Deletes class folder so that next build is clean.  Is not part of main build and is a seperate task</description>
